# a-finder-cli

./: .gitignore  README.md  akshare_data_provider.py  analysis_service.py  candidate_rules.py  candidate_schema.py  cli_layer.py  config.py  data_fetch.py  data_providers.py  db_repository.py  db_schema.py  decision_rules.py  domain_models.py  errors.py  formatter.py  indicators.py  logger.py  ma_backtest.py  manage.sh  market_data.py  pyproject.toml  scoring.py  signal_rules.py  signal_schema.py  stock_cli.py  stock_strategies.py  sync_all.sh  sync_incremental_pick.sh  sync_range.sh  sync_service.py  system-design.md  test_ma_backtest.sh  utils.py  view_models.py
.learnings/: ERRORS.md
